--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,11 +1,19 @@
 # Introduction
- 
-Welcome to Nextra! This is a basic docs template. You can use it as a starting point for your own project :)
 
-## What is Nextra?
+![miney-app](https://miney.app/miney-app-screenshot.png)
 
-A **simple**, **powerful** and **flexible** site generation framework with everything you love from Next.js.
+Manage your finances effortlessly with Miney, the minimalist expense tracker designed for easy income and expense tracking. With Miney, you can:
 
-## Documentation
+- 💡Quick Bookkeeping : Record your income, expenses and transfers within seconds quickly.
 
-The documentation is available at [https://nextra.site](https://nextra.site).
+- 💼Multiple Account Management : Manage multiple accounts in one place and summarize your fund situation.
+
+- 🎯Personalized Categories : Create unique categories that meet your financial needs. 
+
+- 📈Chart Statistics : Support line charts and pie charts to analyze your expenditure situation. 
+
+- 🎯Flexible Budget Planning : Plan and set the budget to stay within the target expenditure limit. 
+
+- 🔍Bill Search : Filter and summarize your bills through keywords and filters. 
+
+- 📱Multi-device Data Synchronization : Keep your accounts synchronized anytime and anywhere across multiple devices.
